--- a/auth/package.json
+++ b/auth/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll --no-cache",
     "start": "ts-node-dev --poll src/index.ts"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": ["./src/test/setup.ts"]
+  },
   "keywords": [],
-  "author": "",
+  "author": "emasys",
   "license": "ISC",
   "dependencies": {
     "@types/cookie-session": "^2.0.41",
@@ -24,6 +29,12 @@
     "typescript": "^4.0.5"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.10.0"
+    "@types/jest": "^26.0.15",
+    "@types/mongoose": "^5.10.0",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.6.3",
+    "mongodb-memory-server": "^6.9.2",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4"
   }
 }
